--- a/CarRental/Views/Shared/_Layout.cshtml
+++ b/CarRental/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="~/assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="~/assets/css/uploadimage.css">
-    
+    @RenderSection("style", required: false)
 
 </head>
 <body>
