--- a/CarRental/wwwroot/assets/css/style.css
+++ b/CarRental/wwwroot/assets/css/style.css
@@ -7192,7 +7192,7 @@ mark {
 .breadcrumbs-area {
     padding: 100px 0;
    /* background: #f6f6f6 url(../images/bg/breadcrumb.jpg) no-repeat scroll center center/cover;*/
-    background:  url(../images/bg/breadcrumb.jpg) no-repeat scroll center center/cover !important;
+    background:  url(../images/bg/istockphoto-2045081543-1024x1024.jpg) no-repeat scroll center center/cover !important;
 }
 #ffffff
 .breadcrumbs-area:before {
