--- a/CarRental/Views/Home/Index.cshtml
+++ b/CarRental/Views/Home/Index.cshtml
@@ -285,8 +285,8 @@
                     <!--Section Title Start-->
                     <div class="col-12">
                         <div class="section-title text-center mb-30">
-                            <span class="section-title-1">A little Story About Us</span>
-                            <h2 class="section-title-large">Our History</h2>
+                            <span class="section-title-1">Chương trình khuyển mại tết 2025</span>
+                            <h2 class="section-title-large">SALES EVENT</h2>
                         </div>
                     </div>
                     <!--Section Title End-->
@@ -294,8 +294,8 @@
                 <div class="row">
                     <div class="col-lg-8 ms-auto me-auto">
                         <div class="history-area-content pb-0 mb-0 border-0 text-center">
-                            <p><strong>Captain America: Civil War Christopher Markus and Stephen McFeely see the Hulk as the game over moment.</strong></p>
-                            <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus. Phasellus eu rhoncus dolor, vitae scelerisque sapien</p>
+                        <p><strong>Tết đến, xe về - Ưu đãi ngập tràn, hành trình an toàn</strong></p>
+                        <p>Chào đón Tết với ưu đãi đặc biệt từ dịch vụ cho thuê xe của chúng tôi! Nhận ngay giảm giá hấp dẫn và tận hưởng hành trình an toàn, tiện lợi cùng gia đình và bạn bè. Đặt xe ngay hôm nay để có một mùa Tết trọn vẹn và đáng nhớ!</p>
                         </div>
                     </div>
                 </div>
@@ -311,7 +311,7 @@
                         <div class="single-banner hover-style mb-30">
                             <div class="banner-img">
                                 <a href="#">
-                                    <img src="~/assets/images/banner/1-1.jpg" alt="">
+                                    <img src="~/files/sale/3IU3X62.jpg" alt="">
                                     <div class="overlay-1"></div>
                                 </a>
                             </div>
@@ -323,7 +323,7 @@
                         <div class="single-banner hover-style mb-30">
                             <div class="banner-img">
                                 <a href="#">
-                                    <img src="~/assets/images/banner/1-2.jpg" alt="">
+                                    <img src="~/files/sale/IT55BVCT.jpg" alt="">
                                     <div class="overlay-1"></div>
                                 </a>
                             </div>
@@ -335,7 +335,7 @@
                         <div class="single-banner hover-style mb-30">
                             <div class="banner-img">
                                 <a href="#">
-                                    <img src="~/assets/images/banner/1-3.jpg" alt="">
+                                    <img src="~/files/sale/JYPBS7Z.jpg" alt="">
                                     <div class="overlay-1"></div>
                                 </a>
                             </div>
