--- a/CarRental/Views/Cart/Checkout.cshtml
+++ b/CarRental/Views/Cart/Checkout.cshtml
@@ -68,7 +68,7 @@
         </div>
         <div class="row">
             <div class="col-lg-6 col-12 col-custom">
-                <form id="checkoutForm">
+                <form id="checkoutForm" >
                     <div class="checkbox-form">
                         <h3>Billing Details</h3>
                         <div class="row">
@@ -76,7 +76,13 @@
                                 <div class="order-notes mt-3">
                                     <div class="checkout-form-list checkout-form-list-2">
                                         <label>Order Notes</label>
-                                        <textarea id="notes" cols="30" rows="10" placeholder="Notes about your order, e.g. special notes for delivery."></textarea>
+                                        <textarea  id="notes" cols="30" rows="10" placeholder="Notes about your order, e.g. special notes for delivery."></textarea>
+                                    </div>
+                                </div>
+                                <div class="ship-different-title">
+                                    <div>
+                                        <input id="ship-box" type="checkbox">
+                                        <label for="ship-box">Thanh toán bằng VnPay</label>
                                     </div>
                                 </div>
                             </div>
@@ -86,8 +92,10 @@
                                     <textarea id="notes" placeholder="Nhập lời nhắn" ></textarea>
                                 </div>
                             </div> *@
-                            
-                            <button type="submit" class="btn flosun-button secondary-btn black-color rounded-0 w-100">Place Order</button>
+                            <button type="submit" class="btn flosun-button secondary-btn black-color rounded-0 w-100 mt-4">Thanh toán</button>
+                            @* <button type="submit" name="paymentmethod" class="btn flosun-button secondary-btn black-color rounded-0 w-100" value="Thanh toán COD" /><button>
+                            <input type="submit" name="paymentmethod" class="btn flosun-button secondary-btn black-color rounded-0 w-100 mt-2" value="Thanh toán VNPay" />
+                             *@
 
 
 
@@ -194,13 +202,18 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-                $(document).ready(function () {
+            $(document).ready(function () {
+
+
+             // Lấy giá trị từ checkbox
+             var paymentMethod = $("#ship-box").is(":checked") ? "Thanh toán COD" : "Thanh toán VNPay";
+
             $("#checkoutForm").submit(function (e) {
                 e.preventDefault(); // Ngăn chặn submit form mặc định
 
                 var formData = {
                     Notes: $("#notes").val(),
-                    
+                    paymentmethod: paymentMethod // Thêm giá trị payment vào dữ liệu gửi
                 };
 
                 $.ajax({
