format car price

--- a/CarRental/Views/Cart/Checkout.cshtml
+++ b/CarRental/Views/Cart/Checkout.cshtml
@@ -23,7 +23,7 @@
 </div>
 <!-- Breadcrumb Area End Here -->
 <!-- Checkout Area Start Here -->
-<div class="checkout-area mt-no-text">
+<div class="checkout-area mt-no-text" style="margin-bottom:500px">
     <div class="container custom-container">
         <div class="row">
             <div class="col-12 col-custom">
@@ -141,7 +141,7 @@
                             </tfoot>
                         </table>
                     </div>
-                    <div class="payment-method">
+                    @* <div class="payment-method">
                         <div class="payment-accordion">
                             <div id="accordion">
                                 <div class="card">
@@ -191,7 +191,7 @@
                                 <button class="btn flosun-button secondary-btn black-color rounded-0 w-100">Place Order</button>
                             </div>
                         </div>
-                    </div>
+                    </div> *@
                 </div>
             </div>
         </div>
