--- a/CarRental/Views/Shared/Components/Product/Default.cshtml
+++ b/CarRental/Views/Shared/Components/Product/Default.cshtml
@@ -41,8 +41,8 @@
                       
                     </div>
                     <div class="price-box">
-                        <span class="regular-price ">$@item.SalePrice</span>
-                        <span class="old-price"><del>$@item.Price</del></span>
+                        <span class="regular-price ">$@item.SalePrice.Value.ToString("N0")/ngày</span>
+                        <span class="old-price"><del>$@item.Price.Value.ToString("N0")</del></span>
                     </div>
                     <button type="button" data-id="@item.CarId" class="btn product-cart ajax-add-to-cart">Add to Cart</button>
                 </div>
