--- a/CarRental/Views/Shared/Components/News/Default.cshtml
+++ b/CarRental/Views/Shared/Components/News/Default.cshtml
@@ -13,7 +13,7 @@
                     </div>
                     <div class="blog-content">
                         <div class="blog-text">
-                            <h4><a href="blog-details-fullwidth.html">@item.Title</a></h4>
+                        <h4><a href="@sUrl">@item.Title</a></h4>
                             <div class="blog-post-info">
                                 <span><a href="#">By @item.CreatedBy</a></span>
                                 <span>@item.CreatedDate</span>
